--- a/courses/templates/courses/list/list.html
+++ b/courses/templates/courses/list/list.html
@@ -42,7 +42,7 @@
 {% block content %}
     <div class="jumbotron">
       <h1 class="display-3">Elearning Courses</h1>
-      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+      <p>Get exposure to new ideas and concepts that we can use to appreciate and improve the world around us and the world within us. </p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
     </div>
     <div class="container">
