--- a/courses/templates/courses/list/course_detail.html
+++ b/courses/templates/courses/list/course_detail.html
@@ -16,7 +16,7 @@
         <aside class="col-md-4 blog-sidebar">
           <div class="p-3 mb-3 bg-light rounded">
             <h4 class="font-italic">About</h4>
-            <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+            <p class="mb-0"><em></em>Although eLearning is based on formalized learning, it is provided through electronic devices such as computers, tablets and even cellular phones that are connected to the internet. This makes it easy for users to learn anytime, anywhere, with few, if any, restrictions. Basically, eLearning is training, learning, or education delivered online through a computer or any other digital device.</p>
           </div>
         </aside>
         </div>
