context_name repair

--- a/courses/templates/courses/list/course_list.html
+++ b/courses/templates/courses/list/course_list.html
@@ -46,7 +46,7 @@
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
     </div>
     <div class="row align-items-md-stretch">
-      {% for course in course_list %}
+      {% for course in courses_list %}
           <div class="col-md-6">
             <div class="h-100 p-5 bg-light border rounded-3">
               <h2>{{ course.courses }}</h2>
