--- a/students/templates/students/student/enrolled_units.html
+++ b/students/templates/students/student/enrolled_units.html
@@ -7,18 +7,29 @@
     <h2>{{ request.user.first_name }} {{ user.last_name }}</h2>
     <h6 class="card-subtitle mb-2 text-muted">{{ user.email }}</h6>
     <h4>My Enrolled Unit(s)</h4>
-    {% for units in object_list %}
-        <div class="card" style="width:65rem;">
-          <div class="card-body">
-            <h5 class="card-title">{{ units.title }}</h5>
-              <h6 class="card-subtitle mb-2 text-muted">By: {{ units.owner}}</h6>
-                <p class="card-text">{{ units.overview }}</p>
-              <a class="btn btn-light" href="{% url 'list_topics_view' units.pk %}" role="button">View Topics</a>
-          </div>
-        </div>
-        <br>
-    {% empty%}
-        <h4>You haven't Enrolled Yet!!</h4>
-    {% endfor %}
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        {% for units in object_list %}
+            <div class="col">
+              <div class="card shadow-sm">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+
+                <div class="card-body">
+                    <h5 class="card-title">{{ units.title }}</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: {{ units.owner}}</h6>
+                  <p class="card-text">{{ units.overview | truncatewords:20}}</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a class="btn btn-light" href="{% url 'list_topics_view' units.pk %}" role="button">View</a>
+
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+        {% empty%}
+            <h4>You haven't Enrolled Yet!!</h4>
+        {% endfor %}
+    </div>
 
 {% endblock %}
